[package]
name = "btnify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["macros"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
