[package]
name = "btnify"
version = "1.0.0"
edition = "2021"
description = "Hosts a website with buttons for you so you can focus on what matters!"
license = "MIT"
repository = "https://github.com/NotThatRqd/btnify"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
html-to-string-macro = "0.2.5"
hyper = "0.14.27"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
